# zdtp-chess

./: .gitignore  GITHUB_READY.md  LICENSE.txt  README.md  __init__.py  gateway_patterns.py  multidimensional_evaluator.py  opponent_response_analyzer.py  positional_analyzer.py  pyproject.toml  requirements.txt  strategic_analyzer.py  tactical_analyzer.py  test_session_01_verification.py  zdtp_chess_server.py
data/: canonical_six_patterns.json
zdtp_chess_mcp/: __main__.py  dimensional_encoder.py  dimensional_portal.py  gateway_patterns.py  multidimensional_evaluator.py  path_verifier.py  strategic_analyzer.py  stressor_positions.py  zdtp_chess_server.py  zdtp_engine.py  zdtp_showcase.py
